fix z-index for played card order

--- a/client/src/app/tablespace/tablespace.component.css
+++ b/client/src/app/tablespace/tablespace.component.css
@@ -35,10 +35,3 @@
     left: 0;
     top: 0;
 }
-
-button {
-    z-index: 10;
-    position: absolute;
-    left: 5px;
-    top: 5px;
-}
